--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.2.0",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
