--- a/angular.json
+++ b/angular.json
@@ -118,8 +118,13 @@
               "devServerTarget": "angular-tutorial-mystore:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "angular-tutorial-mystore"
 }
